Document the verified Week 6 release
Update setup instructions for the shared Java 25 JAR and replace the
user-guide screenshot with the current full desktop window.

Record the four-platform checks, reproducible release smoke scenarios,
and artifact checksum. Credit the starter and packaging guidance, and
state the remaining artwork attribution and dashboard checks clearly.